Fixed abouthis app text alignment

--- a/hotel-list-client/src/components/About/aboutThisApp.css
+++ b/hotel-list-client/src/components/About/aboutThisApp.css
@@ -170,6 +170,7 @@ section {
   width: 40vw;
   min-height: 40vh;
   font-size: 1.2rem;
+  text-align: left;
 }
 
 .about-container h4 {
